--- a/css/user/home.css
+++ b/css/user/home.css
@@ -2,5 +2,6 @@ table tr th,td {
     padding:5px 30px;
 }
 #user_detail_heading {
-    text-decoration-line: underline;
+    padding-bottom:2px;
+    border-bottom: 1px solid grey;
 }
